[gd_scene load_steps=6 format=3 uid="uid://bk6562b2gbrms"]

[ext_resource type="Script" uid="uid://cw2ixtceur54n" path="res://scenes/player_hud.gd" id="1_671gg"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xto82"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)
border_blend = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_iv6vl"]
bg_color = Color(1, 0, 0, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1kd3p"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)
border_blend = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n6cer"]
bg_color = Color(0, 0.647834, 0.170333, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)
border_blend = true

[node name="PlayerHUD" type="CanvasLayer"]
layer = 0
script = ExtResource("1_671gg")

[node name="HealthBar" type="ProgressBar" parent="."]
offset_right = 200.0
offset_bottom = 20.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/background = SubResource("StyleBoxFlat_xto82")
theme_override_styles/fill = SubResource("StyleBoxFlat_iv6vl")
show_percentage = false
metadata/_edit_use_anchors_ = true

[node name="HealthLabel" type="Label" parent="HealthBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -11.5
offset_right = 100.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2

[node name="PetHealthBar" type="ProgressBar" parent="."]
offset_right = 200.0
offset_bottom = 20.0
theme_override_styles/background = SubResource("StyleBoxFlat_1kd3p")
theme_override_styles/fill = SubResource("StyleBoxFlat_n6cer")
show_percentage = false

[node name="PetHealthLabel" type="Label" parent="PetHealthBar"]
layout_mode = 0
offset_right = 200.0
offset_bottom = 23.0

[node name="LevelBar" type="ProgressBar" parent="."]
offset_right = 4.0
offset_bottom = 27.0
max_value = 1000.0
show_percentage = false

[node name="LevelLabel" type="Label" parent="LevelBar"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "Level 1"

[node name="PlayerNameLabel" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0
theme_override_font_sizes/font_size = 18
text = "Player"
horizontal_alignment = 1

[node name="PetNameLabel" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0
theme_override_font_sizes/font_size = 18
text = "Pet"
horizontal_alignment = 1
